package pl.programodawca.drivergear.model;

public enum UserRole {
    USER,
    ADMIN
}

